# fastapi_pj

./: ..env  alembic.ini  pyproject.toml
app/: database.py  database_async.py  main.py  main1.py  main2.py  main3.py  main4.py  main5.py  models.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: items.py  login.py  notifications.py  users.py
app/core/: config.py  security.py
app/schemas/: __init__.py  push_token.py  token.py  user.py
app/services/: push_service.py
testAlembic/: env.py
testAlembic/versions/: 11b5bef9320a_正式新增推播_token_表.py  52960f2641f6_改回email.py
