[project]
name = "fastapi-pj"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "周仁明",email = "stevenchouis@hotmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "update (>=0.0.1,<0.0.2)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "exponent-server-sdk (>=2.2.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)"
]

[tool.ruff]
# 程式碼每行長度限制
line-length = 88
# 目標 Python 版本
target-version = "py312"

[tool.ruff.lint]
# 啟動的檢查規則 (E: Pycodestyle, F: Pyflakes, I: isort 排序, UP: Pyupgrade)
select = ["E", "F", "I", "UP", "B"]
# 忽略特定的警告 (視需求調整)
ignore = ["B008"]

[tool.ruff.format]
# 使用單引號還是雙引號 (建議用雙引號，這是 Black 的標準)
quote-style = "double"
# 自動排版 docstring
docstring-code-format = true

